# stractt

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: main.rs  warc.rs
core/src/api/: docs.rs
core/src/entity_index/: mod.rs
core/src/entity_index/entity/: tests.rs
core/src/entrypoint/: configure.rs  indexer.rs  webgraph.rs
core/src/ranking/: mod.rs
core/src/warc/: next.rs
core/src/webgraph/centrality/: betweenness.rs
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bangs.rs  highlighted.rs  snippet.rs
crates/core/src/api/: autosuggest.rs  docs.rs  explore.rs  hosts.rs  improvement.rs  mod.rs  search.rs  summarize.rs  webgraph.rs
crates/core/src/entity_index/: entity.rs
crates/core/src/entrypoint/: api.rs  webgraph_server.rs
crates/core/src/inverted_index/: search.rs
crates/core/src/ranking/signal/: mod.rs  prelude.rs
crates/core/src/search_prettifier/: entity.rs  mod.rs  stack_overflow.rs
crates/core/src/searcher/: mod.rs
crates/core/src/webgraph/: edge.rs  node.rs
crates/core/src/webpage/: region.rs
crates/core/src/widgets/: calculator.rs  mod.rs  thesaurus.rs
crates/optics/: Cargo.toml
crates/optics/src/: lib.rs
crates/thesaurus/: Cargo.toml
crates/thesaurus/src/: english-wordnet-2022-subset.ttl  lib.rs
frontend/src/lib/: themes.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/components/: Button.svelte
frontend/src/routes/components/: +page.svelte
frontend/src/routes/explore/: +page.svelte
frontend/src/routes/settings/sites/: +page.svelte  (+1 more)
