[package]
name = "thesaurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
regex.workspace = true
rio_api.workspace = true
rio_turtle.workspace = true
serde.workspace = true
thiserror.workspace = true
utoipa.workspace = true
